Compression settings changed.

--- a/index.html
+++ b/index.html
@@ -333,9 +333,9 @@
       unityLoader.src = "Build/SpinnerTest.loader.js";
       unityLoader.onload = () => {
         createUnityInstance(canvas, {
-          dataUrl: "Build/SpinnerTest.data.br",
-          frameworkUrl: "Build/SpinnerTest.framework.js.br",
-          codeUrl: "Build/SpinnerTest.wasm.br",
+          dataUrl: "Build/SpinnerTest.data.gz",
+          frameworkUrl: "Build/SpinnerTest.framework.js.gz",
+          codeUrl: "Build/SpinnerTest.wasm.gz",
           streamingAssetsUrl: "StreamingAssets",
           companyName: "DefaultCompany",
           productName: "SpinnerGame",
