--- a/index.html
+++ b/index.html
@@ -333,9 +333,9 @@
       unityLoader.src = "Build/SpinnerTest.loader.js";
       unityLoader.onload = () => {
         createUnityInstance(canvas, {
-          dataUrl: "Build/SpinnerTest.data",
-          frameworkUrl: "Build/SpinnerTest.framework.js",
-          codeUrl: "Build/SpinnerTest.wasm",
+          dataUrl: "Build/SpinnerTest.data.unityweb",
+          frameworkUrl: "Build/SpinnerTest.framework.js.unityweb",
+          codeUrl: "Build/SpinnerTest.wasm.unityweb",
           streamingAssetsUrl: "StreamingAssets",
           companyName: "DefaultCompany",
           productName: "SpinnerGame",
