--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
       document.body.style.backgroundImage = "url('background.jpg')";
 
-      loading_bg.style.backgroundImage = "linear-gradient(#c046ab, #1b18b1)";
+      loading_bg.style.backgroundImage = "url('background.jpg')";
 
       function setLoading(logoPositionTop, logoPositionLeft, logoWidth, logoHeight, positionTop, positionLeft, width, height, barColor, barFillColor, barBorder, barFillBorder, barBorderRadius, barFillBorderRadius, barBackgroundImage, barBackgroundSize) {
         // Указываем размер логотипа
