--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <canvas id="canvas" class="canvas" tabindex="-1"></canvas>
     <div class="loading_bg">
       <div class="loading">
-        <div id="flags" style="position: absolute; top: 20%; left: 5%; width: 100%; height: 100%;">
+        <div id="flags" style="position: absolute; top: 20%; left: 5%; width: 100%; height: 100%; display:none;">
           <div id="flag1" style="position: absolute; top: 0%; left: 1%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag1.jpg');"></div>
 
           <div id="flag2" style="position: absolute; top: 0%; left: 16%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag2.jpg');"></div>
@@ -288,8 +288,8 @@
 
           game_logo.style.top = "50%";
           game_logo.style.left = "50%";
-          game_logo.style.width = "80%"; 
-          game_logo.style.height = "80%";
+          game_logo.style.width = "100%"; 
+          game_logo.style.height = "100%";
         } else if(loading_bar_style == 1) {
           setLoading("10%", "50%", "40%", "40%", "75%", "50%", "70%", "2%", "rgba(255, 255, 255, 0.1)", "#FFF", "0", "0 0 10px rgba(255, 255, 255, 0.5)", "0", "0", "0", "0");
           flag_container.style.top = "20%";
@@ -314,8 +314,8 @@
 
           game_logo.style.top = "50%";
           game_logo.style.left = "50%";
-          game_logo.style.width = "80%"; 
-          game_logo.style.height = "80%";
+          game_logo.style.width = "100%"; 
+          game_logo.style.height = "100%";
         }
 
       }
