--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         company_logo.style.width = logoWidth; 
         company_logo.style.height = logoHeight;
 
-        loading_bar.style.top = positionTop;
+        loading_bar.style.top = "67.3%";
         loading_bar.style.left = positionLeft;
 
         loading_bar.style.width = width;
@@ -307,7 +307,7 @@
           loading_bar.style.display = "none";
           loading_bar_fill.style.display = "none";
           loading_gif.style.display = "block";
-          loading_gif.style.top = "67.3%";
+          loading_gif.style.top = "75%";
           loading_gif.style.width = "15%";
           loading_gif.style.height = "15%";
           loading_gif.style.left = "50%";
