--- a/index.html
+++ b/index.html
@@ -99,33 +99,33 @@
   <body>
     <canvas id="canvas" class="canvas" tabindex="-1"></canvas>
     <div class="loading_bg">
-      <div class="loading">
-        <div id="flags" style="position: absolute; top: 20%; left: 5%; width: 100%; height: 100%;">
-          <div id="flag1" style="position: absolute; top: 0%; left: 1%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag1.jpg');"></div>
+        <div class="loading">
+            <div id="flags" style="position: absolute; top: 20%; left: 5%; width: 100%; height: 100%; display:none;">
+                <div id="flag1" style="position: absolute; top: 0%; left: 1%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag1.jpg');"></div>
 
-          <div id="flag2" style="position: absolute; top: 0%; left: 16%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag2.jpg');"></div>
+                <div id="flag2" style="position: absolute; top: 0%; left: 16%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag2.jpg');"></div>
 
-          <div id="flag3" style="position: absolute; top: 0%; left: 37%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag3.jpg');"></div>
+                <div id="flag3" style="position: absolute; top: 0%; left: 37%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag3.jpg');"></div>
 
-          <div id="flag4" style="position: absolute; top: 0%; left: 53%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag4.jpg');"></div>
+                <div id="flag4" style="position: absolute; top: 0%; left: 53%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag4.jpg');"></div>
 
-          <div id="flag5" style="position: absolute; top: 0%; left: 69%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag5.jpg');"></div>
+                <div id="flag5" style="position: absolute; top: 0%; left: 69%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag5.jpg');"></div>
 
-          <div id="flag6" style="position: absolute; top: 0%; left: 85%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag6.jpg');"></div>
+                <div id="flag6" style="position: absolute; top: 0%; left: 85%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag6.jpg');"></div>
 
-          <div id="flag7" style="position: absolute; top: 0%; left: 85%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag7.jpg');"></div>
+                <div id="flag7" style="position: absolute; top: 0%; left: 85%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag7.jpg');"></div>
 
-          <div id="flag8" style="position: absolute; top: 0%; left: 85%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag8.jpg');"></div>
+                <div id="flag8" style="position: absolute; top: 0%; left: 85%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag8.jpg');"></div>
+            </div>
+            <p id="bottom_text" style="position: absolute; top: 82%; left: 10%; bottom: 0; width: 100%; max-width: 80%; text-align: center; color: white; opacity: 70%;"></p>
+            <div id="loading_gif" style="position: absolute; transform: translate(-50%, -50%); top: 45%; width: 20%; height: 20%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('loading.gif');"></div>
+            <p id="loading_text" style="position: absolute; top: 60%; bottom: 0; width: 100%; max-width: 100%; text-align: center; color: white; display: none;">0%</p>
+            <div class="loading_logo" id="company_logo" style="display: none;"></div>
+            <div class="loading_logo" id="game_logo"></div>
+            <div class="loading_bar">
+                <div class="loading_bar_fill"></div>
+            </div>
         </div>
-        <p id="bottom_text" style="position: absolute; top: 82%; left: 10%; bottom: 0; width: 100%; max-width: 80%; text-align: center; color: white; opacity: 70%;">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов.<br><br>Все права защищены (c) 2024</p>
-        <div id="loading_gif" style="position: absolute; transform: translate(-50%, -50%); top: 45%; width: 20%; height: 20%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('loading.gif');"></div>
-        <p id="loading_text" style="position: absolute; top: 60%; bottom: 0; width: 100%; max-width: 100%; text-align: center; color: white;">0%</p>
-        <div class="loading_logo" id="company_logo"></div>
-        <div class="loading_logo" id="game_logo"></div>
-        <div class="loading_bar">
-          <div class="loading_bar_fill"></div>
-        </div>
-      </div>
     </div>
     <script>
       var canvas = document.querySelector("#canvas");
@@ -196,7 +196,7 @@
 
       document.body.style.backgroundImage = "url('background.jpg')";
 
-      loading_bg.style.backgroundImage = "linear-gradient(#c046ab, #1b18b1)";
+      loading_bg.style.backgroundImage = "url('background.jpg')";
 
       function setLoading(logoPositionTop, logoPositionLeft, logoWidth, logoHeight, positionTop, positionLeft, width, height, barColor, barFillColor, barBorder, barFillBorder, barBorderRadius, barFillBorderRadius, barBackgroundImage, barBackgroundSize) {
         // Указываем размер логотипа
@@ -206,7 +206,7 @@
         company_logo.style.width = logoWidth; 
         company_logo.style.height = logoHeight;
 
-        loading_bar.style.top = positionTop;
+        loading_bar.style.top = "71.3%";
         loading_bar.style.left = positionLeft;
 
         loading_bar.style.width = width;
@@ -288,8 +288,8 @@
 
           game_logo.style.top = "50%";
           game_logo.style.left = "50%";
-          game_logo.style.width = "50%"; 
-          game_logo.style.height = "50%";
+          game_logo.style.width = "100%"; 
+          game_logo.style.height = "100%";
         } else if(loading_bar_style == 1) {
           setLoading("10%", "50%", "40%", "40%", "75%", "50%", "70%", "2%", "rgba(255, 255, 255, 0.1)", "#FFF", "0", "0 0 10px rgba(255, 255, 255, 0.5)", "0", "0", "0", "0");
           flag_container.style.top = "20%";
@@ -314,8 +314,8 @@
 
           game_logo.style.top = "50%";
           game_logo.style.left = "50%";
-          game_logo.style.width = "50%"; 
-          game_logo.style.height = "50%";
+          game_logo.style.width = "100%"; 
+          game_logo.style.height = "100%";
         }
 
       }
