--- a/index.html
+++ b/index.html
@@ -359,9 +359,9 @@
       document.body.appendChild(unityLoader);
         document.addEventListener("visibilitychange", function () {
           if (!document.hidden) {
-            myGameInstance.SendMessage('Daemon', 'UpdateRemoteData');
+            myGameInstance.SendMessage('Daemon', 'ReloadGame');
           }
-        }
+        });
     </script>
   </body>
 </html>
