--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
       document.body.appendChild(unityLoader);
         document.addEventListener("visibilitychange", function () {
           if (!document.hidden) {
-            myGameInstance.SendMessage('Daemon', 'ReloadGame');
+            myGameInstance.SendMessage('Daemon', 'UpdateRemoteData');
           }
         });
     </script>
